--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Vuforia</string>
-    <string name="app_description">Vuforia Sample Applications</string>
+    <string name="app_name">LookUpWord</string>
+    <string name="app_description">Look Up Word Applications</string>
     
     <string name="button_start">Start</string>
-    <string name="activities_list_title_string">Vuforia Samples</string>
+    <string name="activities_list_title_string">Look Up Word Samples</string>
     <string name="activities_list_empty">No activities</string>
 
     <string name="button_OK">OK</string>
